# lumesh

./: .dune-prelude  .gitignore  .history.txt  CHANGELOG.md  Cargo.toml  Cross.toml  NEWS-cn.md  NEWS.md  README-cn.md  README.md  convert_fish_to_lumesh.py  syntax-cn.md  syntax.md
.github/workflows/: codeberg.yml  codeberg_release.yml  cross.yml  release.yml  rust.yml
.woodpecker/: codeberg.yml  codeberg_release.yml
.zed/: debug.json
benches/: lumesh-prelude  parser_benchmark.rs
docs/: INS_README.md  RULE.md  TOKENIZER_DIFF_046858E.md  TOKENIZER_DIFF_046858E_BEHAVIOR.md  TOKENIZER_RULE.md  install.bat  install.sh  install_codeberg.sh  install_github.sh  install_in_tar.sh  tree-sitter.sh
docs/completions/: Hyprland.csv  Thunar.csv  a2disconf.csv  a2dismod.csv  a2enconf.csv  a2ensite.csv  acpi.csv  actionlint.csv  addpart.csv  addr2line.csv  age.csv  alias.csv  alsabat.csv  alsactl.csv  alsamixer_1_10.csv  alsaucm.csv  ansible-playbook.csv  ansible-vault.csv  apk.csv  apkanalyzer.csv  apm.csv  apropos.csv  apt-build.csv  apt-config.csv  apt-listbugs.csv  apt-listchanges.csv  apt-mark.csv  apt-move.csv  apt-rdepends.csv  apt-setup.csv  apt-show-source.csv  apt-sortpkgs.csv  apt-spy.csv  apt-zip-inst.csv  apt-zip-list.csv  aptitude.csv  arecord.csv  arecordmidi.csv  arecordmidi2.csv  aria2c.csv  (+787 more)
docs/config/: config.lm  config_win.lm  prompt_ka.lm
docs/mods/: deco.lm  fish2csv.lm  lman.lm
docs/unprocessed/: _7z.csv  _abbr.csv  _abook.csv  _adb.csv  _age-keygen.csv  _age.csv  _airmon-ng.csv  _alacritty.csv  _alsactl.csv  _alternatives.csv  _amixer.csv  _animate.csv  _ansible-galaxy.csv  _ansible-vault.csv  _apk.csv  _apkanalyzer.csv  _apm.csv  _apt-get.csv  _apt-mark.csv  _apt.csv  _aptitude.csv  _ar.csv  _arc.csv  _archlinux-java.csv  _asciinema.csv  _asp.csv  _attrib.csv  _aura.csv  _aws.csv  _bat.csv  _batsh.csv  _blender.csv  _bluetoothctl.csv  _bootctl.csv  _bosh.csv  _bower.csv  _brightnessctl.csv  _btrbk.csv  _btrfs.csv  _builtin.csv  (+285 more)
examples/: compare.rs  trace.rs
src/: .default-dune-prelude  .intro-lumesh-prelude  ai.rs  bin.rs  childman.rs  cli.rs  cmdhelper.rs  completion.rs  env.rs  error.rs  expr.rs  expr2.rs  keyhandler.rs  lib.rs  modman.rs  parser.rs  parser2.rs  parser3.rs  parser_err.rs  parser_new.rs  prompt.rs  repl.rs  runner.rs  runtime.rs  state.rs  syntax.rs  tokenizer.rs  tokens.rs  tui-0.rs  tui-1.rs  tui-3.rs  tui-full.rs  tui.rs  utils.rs
src/ai/: http.rs  https.rs  mod.rs  (+1 more)
wiki/: HOME.md  syntax-cn.md  syntax.md
(+1975 files in other folders)
