[package]
name = "lumesh"
version = "0.16.10"
authors = ["Santo; Superiums; Adam McDaniel"]
edition = "2024"
license = "MIT"
description = "a lighting shell ⚡ bash alternative"
readme = "README.md"
documentation = "https://docs.rs/lumesh"
homepage = "https://www.lumesh.cc.cd"
repository = "https://codeberg.org/santo/lumesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "lumesh"
# path = "src/bin.rs"

[features]
default = ["cli"]
cli = ["dep:clap"]
runner = []
ai-https = ["dep:ureq", "dep:serde"]   # 新增
ai-tls   = ["dep:native-tls"]          # native-tls 方案（更轻量）

[[bin]]
name = "lume"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
name = "lume-se"
path = "src/runner.rs"
required-features = ["runner"]

[dependencies]
# ...原有依赖不变...
ureq  = { version = "^3.3.0", features = ["json"], optional = true }
serde = { version = "^1.0",   features = ["derive"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
native-tls  = { version = "^0.2", optional = true }
textwrap = "0.16.2"
nom = "7.0"
detached-str = "0.1"
rand = "0.10.1"
common_macros = "0.1.1"
snailquote = "0.3.1"
dirs = "6.0"
dunce = "1.0.5"
glob = "0.3.3"
rpassword = "7.5.4"
crossterm = { version = "0.29.0", features = ["bracketed-paste"] }
regex-lite = "0.1.9"
thiserror = "2.0.18"
rustc-hash = "2.1.2"
tinyjson = "2.5.1"
portable-pty = "0.9.0"
csv = "1.4.0"
inquire = {version= "0.9.4",features=["date","editor"]}
tabled = "0.21.0"
serde_json = "1.0.144"
unicode-width = "0.2.0"
# native-tls = "0.2.18"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["term", "ioctl", "signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "processenv", "winbase"] }

[dependencies.toml]
version = "1.1.2"

[dependencies.chrono]
version = "0.4.45"
default-features = false
features = ["clock", "std"]

[dependencies.os_info]
version = "3.15.0"
default-features = false

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
opt-level = 3     # 3优化速度, "z"优化体积
lto = true        # 链接时优化
codegen-units = 1 # 减少代码生成单元
panic = "abort"   # 使用abort而非unwind
strip = true      # 移除调试符号

# [unstable]
# build-std = ["core", "alloc"]
# build-std-features = ["compiler-builtins-mem"]
